--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.8.2",
+        "@tanstack/react-query": "^5.90.2",
         "@tiptap/extension-color": "^2.26.1",
         "@tiptap/extension-highlight": "^2.26.1",
         "@tiptap/extension-image": "^2.26.1",
