--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -45,6 +45,7 @@ rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
+SQLAlchemy-Utils==0.42.0
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
