--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
+asgiref==3.10.0
 bcrypt==4.0.1
 bleach==6.2.0
 certifi==2025.8.3
@@ -17,15 +18,34 @@ elasticsearch==8.10.1
 email_validator==2.2.0
 fastapi==0.116.1
 fastapi-csrf-protect==1.0.3
+googleapis-common-protos==1.70.0
 greenlet==3.2.3
+grpcio==1.75.1
 h11==0.16.0
 httptools==0.6.4
 idna==3.10
+importlib_metadata==8.7.0
 itsdangerous==2.2.0
 minio==7.2.16
 nh3==0.3.0
+opentelemetry-api==1.37.0
+opentelemetry-exporter-otlp==1.37.0
+opentelemetry-exporter-otlp-proto-common==1.37.0
+opentelemetry-exporter-otlp-proto-grpc==1.37.0
+opentelemetry-exporter-otlp-proto-http==1.37.0
+opentelemetry-instrumentation==0.58b0
+opentelemetry-instrumentation-asgi==0.58b0
+opentelemetry-instrumentation-elasticsearch==0.58b0
+opentelemetry-instrumentation-fastapi==0.58b0
+opentelemetry-instrumentation-sqlalchemy==0.58b0
+opentelemetry-proto==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-semantic-conventions==0.58b0
+opentelemetry-util-http==0.58b0
+packaging==25.0
 passlib==1.7.4
 pillow==11.3.0
+protobuf==6.32.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
@@ -36,8 +56,6 @@ pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
-python-magic==0.4.27
-python-magic-bin==0.4.14
 python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.5
@@ -54,3 +72,5 @@ uvicorn==0.35.0
 watchfiles==1.1.0
 webencodings==0.5.1
 websockets==15.0.1
+wrapt==1.17.3
+zipp==3.23.0
