elastic search tags search added backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - ELASTICSEARCH_PORT=${ELASTICSEARCH_PORT}
       - ELASTICSEARCH_USERNAME=${ELASTICSEARCH_USERNAME}
       - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
 
   my-postgres-db:
     image: postgres:latest
