--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -4,7 +4,9 @@ argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 asgiref==3.10.0
 bcrypt==4.0.1
+beautifulsoup4==4.14.2
 bleach==6.2.0
+cachetools==6.2.1
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
@@ -18,10 +20,18 @@ elasticsearch==8.10.1
 email_validator==2.2.0
 fastapi==0.116.1
 fastapi-csrf-protect==1.0.3
+google-ai-generativelanguage==0.6.15
+google-api-core==2.26.0
+google-api-python-client==2.185.0
+google-auth==2.41.1
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
 googleapis-common-protos==1.70.0
 greenlet==3.2.3
 grpcio==1.75.1
+grpcio-status==1.71.2
 h11==0.16.0
+httplib2==0.31.0
 httptools==0.6.4
 idna==3.10
 importlib_metadata==8.7.0
@@ -45,14 +55,17 @@ opentelemetry-util-http==0.58b0
 packaging==25.0
 passlib==1.7.4
 pillow==11.3.0
-protobuf==6.32.1
+proto-plus==1.26.1
+protobuf==5.29.5
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pycryptodome==3.23.0
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
@@ -62,11 +75,14 @@ requests==2.32.5
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.41
 SQLAlchemy-Utils==0.42.0
 starlette==0.47.2
+tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.35.0
 watchfiles==1.1.0
