update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,28 @@ databasechangelog.csv
 liquibase.properties
 
 minio-data/
+
+Makefile
+**/*.acn
+**/*.acr
+**/*.alg
+**/*.app
+**/*.aux
+**/*.bbl
+**/*.bcf
+**/*.blg
+**/*.glg
+**/*.glo
+**/*.gls
+**/*.ist
+**/*.lof
+**/*.log
+**/*.lot
+**/*.out
+**/*.pdf
+**/*.run.xml
+**/*.slg
+**/*.slo
+**/*.sls
+**/*.swp
+**/*.toc
